# shaker

./: .gitignore  CMakeLists.txt  README.md  downloaddata.cpp  downloaddata.h  downloader.cpp  downloader.h  downloadinfo.cpp  downloadinfo.h  downloadlistdialog.cpp  downloadlistdialog.h  downloadlistdialog.ui  jsondatabase.cpp  jsondatabase.h  lesson.cpp  lesson.h  lessons.json  liverecordingscraper.cpp  liverecordingscraper.h  liverecordingscraper.ui  loghandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  scraper.cpp  scraper.h  scraper.py  scraper.ui  scrapinglesson.cpp  scrapinglesson.h  shaker.qrc  shaker_tr_TR.ts  teacherlesson.cpp  teacherlesson.h  uuid.h  video.cpp  video.h
.github/workflows/: cmake.yml
